fixed nav on mobile

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,9 @@ body {
   padding-left: 20px;
 } */
 
+.top {
+  margin-top: 70px;
+}
 h1,
 h2,
 h3,
@@ -64,6 +67,7 @@ h1 {
   font-weight: bold;
   font-size: 2.2rem;
   line-height: 44px;
+  margin-top: 0.5rem;
   text-transform: capitalize;
 }
 h2 {
@@ -77,7 +81,7 @@ h2 {
 /* give all rem units also  */
 h3 {
   font-weight: 500;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   line-height: 29px;
   text-transform: capitalize;
 }
@@ -89,7 +93,7 @@ h4 {
 }
 
 p {
-  margin: 1rem 0;
+  margin: 0.7rem 0;
   color: var(--greyish);
 }
 
@@ -155,89 +159,112 @@ a:active {
   background-color: rgba(229, 229, 229, 0.38);
 }
 
-.navbar {
-  font-size: 18px;
-  /* font-weight: 500; */
+.align-start {
+  align-items: flex-start;
+}
+/* nav styling */
+nav {
   background-color: white;
-  /* border: 1px solid rgba(0, 0, 0, 0.2); */
-  padding-bottom: 10px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  z-index: 100;
+  padding: 0.7rem 0;
 }
 
-.main-nav {
-  list-style-type: none;
+nav .hamburger {
   display: none;
 }
+nav ul {
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+  align-items: center;
+  justify-content: flex-end;
+}
 
-.nav-links,
-.logo {
+nav li {
+  margin-left: 30px;
+}
+
+nav li a {
+  text-transform: capitalize;
   text-decoration: none;
   color: var(--greyish);
 }
 
-.main-nav li {
-  text-align: center;
-  margin: 15px auto;
+a.logo,
+a.nav-links {
+  color: var(--greyish);
+  text-decoration: none;
+  font-size: 1.1rem;
 }
-
-.logo {
-  display: inline-block;
+a.logo {
   text-transform: uppercase;
-  font-size: 18px;
-  color: var(--greyish);
-  margin-top: 10px;
-  /* margin-left: 20px; */
 }
 
-.navbar-toggle {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  /* added margin-right need to check itll be good on mobile regarding the container i added */
-  /* margin-right: 20px; */
-  cursor: pointer;
-  color: var(--greyish);
-  font-size: 24px;
-}
-
-.active {
-  display: block;
-}
-
-/* media query for navbar */
-@media screen and (min-width: 768px) {
-  .navbar {
+@media screen and (max-width: 768px) {
+  .flex :not(.bg-light-grey) {
+    flex-direction: column;
+  }
+  nav {
+    padding: 0.3rem;
+  }
+  nav .hamburger {
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
     display: flex;
-    justify-content: space-between;
-    padding-bottom: 0;
-    height: 70px;
-    align-items: center;
   }
 
-  .main-nav {
-    display: flex;
-    /* margin-right: 30px; */
-    flex-direction: row;
-    justify-content: flex-end;
+  nav .hamburger::focus {
+    outline: none;
   }
 
-  .main-nav li {
-    margin: 0;
-  }
-
-  .nav-links {
-    margin-left: 40px;
-  }
-
-  .logo {
-    margin-top: 0;
-  }
-
-  .navbar-toggle {
+  nav .hamburger .close {
     display: none;
   }
 
-  .logo:hover,
-  .nav-links:hover {
-    color: black;
+  nav .hamburger.show .open {
+    display: none;
+  }
+  nav .hamburger.show .close {
+    display: block;
+  }
+
+  nav .flex {
+    flex-direction: row;
+    padding-top: 25px;
+  }
+
+  nav .img-wrapper {
+    text-align: left;
+  }
+
+  nav ul {
+    display: none;
+  }
+
+  nav ul.show {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    padding-top: 30px;
+    margin: 0;
+    top: 70px;
+    left: 0;
+    width: 100vw;
+    height: calc(100vh- 70px);
+    z-index: 100;
+  }
+
+  nav ul li {
+    margin: 30px 0;
+  }
+
+  nav ul a {
+    color: white;
   }
 }
